RESOLVED FIXED281654
Fix smart pointer warnings in BackgroundFetchLoad.cpp
https://bugs.webkit.org/show_bug.cgi?id=281654
Summary Fix smart pointer warnings in BackgroundFetchLoad.cpp
Ryosuke Niwa
Reported 2024-10-16 23:50:32 PDT
Fix smart pointer static analyzer warnings in BackgroundFetchLoad.cpp
Attachments
Ryosuke Niwa
Comment 1 2024-10-16 23:56:17 PDT
EWS
Comment 2 2024-10-17 16:44:52 PDT
Committed 285367@main (a70b29931e30): <https://commits.webkit.org/285367@main> Reviewed commits have been landed. Closing PR #35352 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-17 16:45:23 PDT
Note You need to log in before you can comment on or make changes to this bug.