Fix smart pointer warnings in BackgroundFetchLoad.cpp https://bugs.webkit.org/show_bug.cgi?id=281654

Reviewed by David Kilzer and Chris Dumez.

* Source/WebKit/NetworkProcess/BackgroundFetchLoad.cpp:
(WebKit::BackgroundFetchLoad::abort):
(WebKit::BackgroundFetchLoad::loadRequest):
(WebKit::BackgroundFetchLoad::didReceiveChallenge):
* Source/WebKit/NetworkProcess/NetworkLoadChecker.cpp:
(WebKit::NetworkLoadChecker::protectedNetworkProcess):
* Source/WebKit/NetworkProcess/NetworkLoadChecker.h:
* Source/WebKit/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:

Canonical link: https://commits.webkit.org/285367@main