Source/WebKit/NetworkProcess/NetworkLoadChecker.h
@@ -106,6 +106,7 @@ public:
 #endif
 
     NetworkProcess& networkProcess() { return m_networkProcess; }
+    Ref<NetworkProcess> protectedNetworkProcess();
 
     const URL& url() const { return m_url; }
     WebCore::StoredCredentialsPolicy storedCredentialsPolicy() const { return m_storedCredentialsPolicy; }
